Working with Picasso
Added Image Loading Successfully.
All articles now load with correct image and title.